# DocAssist

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PLAN.md  QUICKSTART.md  README.md  build.rs  direct_overlay.py  docling_cli.py  docling_table_extract.py  fill_1040.py  fsa2001_fill_from_schema.py  generate_multi_analysis_overlays.py  map_field_labels_geometry.py  ocr_field_analysis.py  overlay_1040.py  overlay_forms.py  post_process_ocr_with_vlm.py  pyproject.toml  requirements-conda.txt  requirements.txt  run.py  run_fsa2001_pipeline.py  setup_github.sh
.github/workflows/: ci.yml
DocAssist/: ContentView.swift  DocAssistApp.swift
DocAssist.xcodeproj/: project.pbxproj
DocAssist/DocAssist/: ContentView.swift  DocAssistApp.swift  Item.swift  PDFiumService.swift
DocAssist/DocAssist.xcodeproj/: project.pbxproj
DocAssist/DocAssistTests/: DocAssistTests.swift  PDFiumModuleTests.swift
DocAssist/DocAssistUITests/: DocAssistUITests.swift  DocAssistUITestsLaunchTests.swift
PDFiumPackage/: Package.swift
annotations/irs/: f1040_label_geometry_diagnostics.json  f1040_ocr_analysis.json
annotations/usda/: images_to_pdf.py  (+6 more)
configs/: default.yaml  ensemble.yaml  episodic.yaml  qwen2.5vl.yaml
docs/: API.md  DOCLING.md  GUI.md  IRS_FORMS.md  PROJECT_PLAN.md  TRAINING.md
examples/: sample_output.json
proto/: pdf_service.proto
src/: __init__.py  docling_mcp.py  ensemble_client.py  episodic_trainer.py  field_extractor.py  form_detector.py  gui_viewer.py  json_converter.py  lmstudio_client.py  main.rs  utils.py  web_dashboard.py
templates/: index.html
tests/: test_extraction.py  test_map_field_labels_geometry.py
(+9 files in other folders)
